--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "ng build --configuration=production"
-  publish = "dist/poke-guess"
+  publish = "dist/poke-guess/browser"
 
 [context.production.environment]
   NODE_ENV = "production"
